# Request-System

./: .gitignore  CMakeLists.txt  README.md  requests.db  users.db
include/: MessageItem.h  OpenAiAPIClient.h  OpenAiAPiClient.h  Request.h  RequestManager.h  RequestService.h  UserService.h  acceptItem.h  createrequestwindow.h  dashboardwindow.h  databasemanager.h  enums.h  feedItem  feedItem.h  feedWindow.h  loginwindow.h  networkclient.h  request.h  requestItem.h  request_board.h  user.h
src/: OpenAiAPIClient.cpp  RequestManager.cpp  RequestService.cpp  UserService.cpp  acceptItem.cpp  client  client.cpp  createrequestwindow.cpp  dashboardwindow.cpp  databasemanager.cpp  feedItem.cpp  feedWindow.cpp  loginwindow.cpp  main.cpp  messageItem.cpp  networkclient.cpp  request.cpp  requestItem.cpp  request_board.cpp  server  server.cpp  user.cpp
tests/: request_tests.cpp
